# algoritmos-escalonamento

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/: process.hpp  scheduler.hpp
backend/src/: simulator.cpp
examples/: proc1.txt
frontend/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  process_table_model.cpp  process_table_model.h  timeline_view.cpp  timeline_view.h
tests/: CMakeLists.txt  compare.cpp  sanity_test.cpp
